src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Airlines__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Airlines</label>
        <referenceTo>Airline__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <inlineHelpText>Your Full Name Please</inlineHelpText>
        <label>Employee Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboardings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboardings</label>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Airlines</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Crew</fullName>
                </value>
                <value>
                    <fullName>Attendant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E5_{0000}</displayFormat>
        <label># of Employee</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>